--- a/style.css
+++ b/style.css
@@ -8,3 +8,8 @@
 body {
     font-family: 'MapoFlowerIsland';
 }
+
+body {
+    background-image: url('./background.jpg');
+    background-size: 'cover';
+}
