--- a/style.css
+++ b/style.css
@@ -13,3 +13,18 @@ body {
     background-image: url('./background.jpg');
     background-size: 'cover';
 }
+
+#name-modal{
+    width: 450px;
+    height: 275px;
+    background-color: #FFC8C8;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
